<resources>
    <string name="app_name">My App portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--buttons labels-->
    <string name="button_label_spotify_streamer">Spotify Streamer</string>
    <string name="button_label_football_scores_app">Football Scores App</string>
    <string name="button_label_library_app">Library App</string>
    <string name="button_label_build_it_bigger_app">Build It Bigger</string>
    <string name="button_label_xyz_reader_app">XYZ Reader</string>
    <string name="button_label_capstone_app">Capstone: Your very own app!</string>

    <!--Toast texts-->
    <string name="text_toast_spotify_streamer">This will launch the Spotify Streamer app!</string>
    <string name="text_toast_football_scores_app">This will launch the football scores app!</string>
    <string name="text_toast_library_app">This will launch the library app!</string>
    <string name="text_toast_build_it_bigger_app">This will launch the build it bigger app!</string>
    <string name="text_toast_xyz_reader_app">This will launch the XYZ reader app!</string>
    <string name="text_toast_capstone_app">This will launch the Castone app!</string>

</resources>
