<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center|top">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">

        <!--
        Portfolio apps' buttons
        Spotify Streamer
        Super Duo (2 buttons):
            Football Scores App
            Library App
        Build It Bigger
        XYZ Reader
        Capstone
        -->

        <Button
            android:id="@+id/spotify_streamer_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_spotify_streamer"
            android:background="#fff08c35"
            android:layout_margin="8dp"
            android:nestedScrollingEnabled="false" />


        <Button
            android:id="@+id/football_scores_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_football_scores_app"
            android:background="#fff08c35"
            android:layout_margin="8dp"
            android:padding="30dp" />

        <Button
            android:id="@+id/library_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_library_app"
            android:background="#fff08c35"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/build_it_bigger_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_build_it_bigger_app"
            android:background="#fff08c35"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/xyz_Reader_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_xyz_reader_app"
            android:background="#fff08c35"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/capstone_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_capstone_app"
            android:background="#fff08c35"
            android:layout_margin="8dp"/>
    </LinearLayout>


</RelativeLayout>
